# em_calibrator

./: .gitignore  CMakeLists.txt  DESIGN-elecholicTech.md  Emm_V5.c  GCODE.md  README.md  sdkconfig.defaults
components/commander/: CMakeLists.txt  commander.c  commander.h  gcode.c  gcode.h
components/fonts/: CMakeLists.txt  font48.c  font48CN.c  fonts.h
components/gpio/: CMakeLists.txt  gpio.c  gpio.h
components/gui_paint/: CMakeLists.txt  Debug.h  gui_bmp.c  gui_bmp.h  gui_paint.c  gui_paint.h
components/i2c/: CMakeLists.txt  i2c.c  i2c.h
components/image/: CMakeLists.txt  image.h
components/io_extension/: CMakeLists.txt  io_extension.c  io_extension.h
components/lvgl_port/: CMakeLists.txt  lvgl_port.c  lvgl_port.h
components/modbus_485/: CMakeLists.txt  modbus_485.c  modbus_485.h
components/motor/: CMakeLists.txt  Emm_V5.h  motor.c  motor.h  usart.c  usart.h
components/rgb_lcd_port/: CMakeLists.txt  rgb_lcd_port.c  rgb_lcd_port.h
components/rs485/: CMakeLists.txt  rs485.c  rs485.h
components/rtc_pcf85063a/: CMakeLists.txt  rtc_pcf85063a.c  rtc_pcf85063a.h
components/sd/: CMakeLists.txt  sd.c  sd.h
components/touch/: CMakeLists.txt  gt911.c  gt911.h  touch.c  touch.h
components/ui/: CMakeLists.txt  ui.c  ui.h  ui_styles.c  ui_styles.h
main/: CMakeLists.txt  app_config.h  idf_component.yml  main.c
