idf_component_register(SRCS "font48CN.c" "font48.c" "font8.c" 
                            "font12.c"
                            "font16.c"
                            "font20.c"
                            "font24.c"
                            "font12CN.c"
                            "font24CN.c"

                        INCLUDE_DIRS "." )
